--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9JRH1CWP6"></script>
+		<script>
+  		 	window.dataLayer = window.dataLayer || [];
+ 		 	function gtag(){dataLayer.push(arguments);}
+ 			gtag('js', new Date());
+
+  			gtag('config', 'G-H9JRH1CWP6');
+		</script>
 		<title>Cindy Chiang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
