--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <html>
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9JRH1CWP6"></script>
-		<script>
-  		 	window.dataLayer = window.dataLayer || [];
- 		 	function gtag(){dataLayer.push(arguments);}
- 			gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H9JRH1CWP6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  			gtag('config', 'G-H9JRH1CWP6');
-		</script>
+  gtag('config', 'G-H9JRH1CWP6');
+</script>
 		<title>Cindy Chiang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -43,9 +43,9 @@
 					<section id="one">
 						<header class="major">
 							<h2>About</h2>
-						<p> I study language processing, language development, and the cognitive mechanisms that underlie these processes-- such as attention, memory, and cognitive control. I work with <a href="https://dornsife.usc.edu/cf/faculty-and-staff/faculty.cfm?pid=1003543" target="_blank"> Toby Mintz </a> and have collaborated with <a href="https://elsikaiser.com/" target="_blank">Elsi Kaiser</a>. My current research focuses on disfluencies (e.g. <i>uh's</i> and <i>um's</i>) and uses eyetracking and mousetracking methods (i.e. clickstream Analysis) in lab and online, as well as computational modelling performed on large text databases of conversational interactions  <a href="https://childes.talkbank.org/" target="_blank"> (CHILDES) </a>. The research is generously supported by the  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2041372&HistoricalAwards=false"  target="_blank"> NSF Doctoral Dissertation Research Improvement Grant</a>.
+						<p> I study language processing, language development, and the cognitive mechanisms that underlie these processes-- such as attention, memory, and cognitive control. I work with <a href="https://dornsife.usc.edu/cf/faculty-and-staff/faculty.cfm?pid=1003543" target="_blank"> Toby Mintz </a> and have collaborated with <a href="https://elsikaiser.com/" target="_blank">Elsi Kaiser</a>. My current research focuses on disfluencies (e.g. <i>uh's</i> and <i>um's</i>) and uses eyetracking and mousetracking methods (i.e. clickstream analysis) in lab and online, as well as computational modelling performed on large text databases of conversational interactions  <a href="https://childes.talkbank.org/" target="_blank"> (CHILDES) </a>. The research is generously supported by the  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2041372&HistoricalAwards=false"  target="_blank"> NSF Doctoral Dissertation Research Improvement Grant</a>.
 
-						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and Redcap, mining electronic medical records, analyzing interview transcriptions, and annotating video data from field studies. The products of these projects are further described in my CV and resume. </p> 
+						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and Redcap, mining electronic medical records, analyzing interview transcriptions, and annotating video data from field studies. The products of these projects are further described in my resume and CV. </p> 
 
 						</header>
 						<ul class="actions">
