--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<p><h3>Speaker identity and structural priming</h3> 
 							<span class="image left"><img src="images/MouseTrackingSetup.jpg" alt="" /></span>
 							Brief experiences with a sentence structure can lead people to produce the same sentence structures in the future, a phenomenon called structural priming. I investigate how perceptions of the speaker will affect the types of predictions a listener makes. Preliminary findings show that structural priming tendencies can shift, depending on how listeners perceive the speaker. 
-							<br><br><b>Research Method: </b> Mouse-tracking implemented on Qualtrics (Adapted <a href= "https://www.sciencedirect.com/science/article/pii/S0747563219303164" target="_blank"> Mathur & Reichling, 2020</a> to accomodate audio and timed visual presentation using Javascript and HTML)
+							<br><br><b>Research Method: </b> Mouse-tracking implemented on Qualtrics (Adapted <a href= "https://www.sciencedirect.com/science/article/pii/S0747563219303164" target="_blank"> Mathur & Reichling, 2020</a> to accomodate audio and timed visual presentation using Javascript and HTML); Usability testing to ensure accurate measurements across different devices and internet speeds
 							<br><b>Data Analysis: </b> Model Comparisons on R (frequentist/Bayesian multi-level modelling and robust methods)
 							<br><b>Impact and Awards: </b> <a href="https://osf.io/6vfkg/"target="_blank"> <i>Chiang & Mintz, AMLaP 2021 </i></a>; Funding from USC Dornsife College and USC Psychology Department
 							</p>
