--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 						<p><h3>Speaker identity and structural priming</h3> 
 							<span class="image left"><img src="images/MouseTrackingSetup.jpg" alt="" /></span>
 							Brief experiences with a sentence structure can lead people to produce the same sentence structures in the future, a phenomenon called structural priming. I investigate how perceptions of the speaker will affect the types of predictions a listener makes. Preliminary findings show that structural priming tendencies can shift, depending on how listeners perceive the speaker. 
-							<br><br><b>Research Method: </b> Mouse-tracking implemented on Qualtrics (Adapted <a href= "https://www.sciencedirect.com/science/article/pii/S0747563219303164" target="_blank"> Mathur & Reichling, 2020</a> to accomodate audio and timed visual presentation using Javascript and HTML); Usability testing to ensure accurate measurements across different devices and internet speeds
+							<br><br><b>Research Method: </b> Mouse-tracking implemented on Qualtrics (Adapted <a href= "https://www.sciencedirect.com/science/article/pii/S0747563219303164" target="_blank"> Mathur & Reichling, 2020</a> to accomodate audio and timed visual presentation using Javascript and HTML); Usability testing to ensure smooth user interactions and accurate measurements across different devices, platforms, and internet speeds
 							<br><b>Data Analysis: </b> Model Comparisons on R (frequentist/Bayesian multi-level modelling and robust methods)
 							<br><b>Impact and Awards: </b> <a href="https://osf.io/6vfkg/"target="_blank"> <i>Chiang & Mintz, AMLaP 2021 </i></a>; Funding from USC Dornsife College and USC Psychology Department
 							</p>
 
 						<p><h3>Linguistic representation and memory</h3> 
 							<span class="image left"><img src="images/DescriptionContrast.jpg" alt="" /></span>
-							How information is presented can impact how easily the information is recalled. For example, a more detailed description of a person, such as <i>bearded man</i> rather than <i> man</i>, can make it easier to recall the information. What happens when a differently worded description, like <i> man with a beard</i>, also taxes memory? Can information still be more easily recalled? Can additional context help with this recall? 
+							How information is presented can impact how easily it is recalled. For example, a more detailed description of a person, such as <i>bearded man</i> rather than <i> man</i>, can make it easier to recall the information. What happens when a differently worded description, like <i> man with a beard</i>, also taxes memory? Can information still be more easily recalled? Can additional context help with this recall? 
 							<br><br><b>Research Method: </b> Reaction Time Measures (Self-Paced Reading)
 							<br><b>Data Analysis: </b> Multi-level modelling on R
 							<br><b>Impact: </b><a href="https://neuro.hse.ru/mirror/pubs/share/direct/305199165.pdf#page=53"target="_blank"> <i>Chiang, Lu, & Kaiser, AMLaP 2019 </i></a>, <i>Chiang, Lu, & Kaiser, CAMP3 2019 </i>
@@ -89,7 +89,7 @@
 						<p><h3>Making Patient Care More Equitable</h3> 
 							<span class="image left"><img src="images/EMR.jpg" alt="" /></span>
 							Approximately one-fifth of children in the United States are estimated to suffer from a mental health disorder. However, a majority do not receive treatment or experience a delay in receiving treatment. I worked with colleagues from the Massachusetts General Hospital to understand and improve screening measures that help doctors identify children who are at risk of a mental health disorder. I also investigated how models of psychiatric care could be improved in an underserved Latinx community. 
-							<br><b>Research Method: </b> Surveys (RedCap), Electronic Medical Records 
+							<br><b>Research Method: </b> Interviews, Surveys (RedCap), Electronic Medical Records 
 							<br><b>Data Analysis: </b> ANOVA, Logistic Regression, Factor Analysis, Receiver operating characteristic Curve, Confirmatory Factor Analysis on SPSS and STATA
 							<br><b>Impact: </b> Publications in <i>Pediatrics</i>, <i>Academic Pediatrics</i>, <i>Journal of Health Care for the Poor and Underserved</i>
 							</p>
