--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<p><h3>Making Patient Care More Equitable</h3> 
 							<span class="image left"><img src="images/EMR.jpg" alt="" /></span>
 							Approximately one-fifth of children in the United States are estimated to suffer from a mental health disorder. However, a majority do not receive treatment or experience a delay in receiving treatment. I worked with colleagues from the Massachusetts General Hospital to understand and improve screening measures that help doctors identify children who are at risk of a mental health disorder. I also investigated how models of psychiatric care could be improved in an underserved Latinx community. 
-							<br><b>Research Method: </b> Interviews, Surveys (RedCap), Electronic Medical Records 
+							<br><br><b>Research Method: </b> Interviews, Surveys (RedCap), Electronic Medical Records 
 							<br><b>Data Analysis: </b> ANOVA, Logistic Regression, Factor Analysis, Receiver operating characteristic Curve, Confirmatory Factor Analysis on SPSS and STATA
 							<br><b>Impact: </b> Publications in <i>Pediatrics</i>, <i>Academic Pediatrics</i>, <i>Journal of Health Care for the Poor and Underserved</i>
 							</p>
