--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<h2>About</h2>
 						<p> I study language processing, language development, and the cognitive mechanisms that underlie these processes-- such as attention, memory, and cognitive control. I work with <a href="https://dornsife.usc.edu/cf/faculty-and-staff/faculty.cfm?pid=1003543" target="_blank"> Toby Mintz </a> and have collaborated with <a href="https://elsikaiser.com/" target="_blank">Elsi Kaiser</a>. My current research focuses on disfluencies (e.g. <i>uh's</i> and <i>um's</i>) and uses eyetracking and mouse tracking methods in lab and online, as well as computational modelling performed on large text databases of conversational interactions  <a href="https://childes.talkbank.org/" target="_blank"> (CHILDES) </a>. The research is generously supported by the  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2041372&HistoricalAwards=false"  target="_blank"> NSF Doctoral Dissertation Research Improvement Grant</a>.
 
-						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and Redcap, mining electronic medical records, analyzing interview transcriptions, and annotating video data from field studies. The products of these projects are further described in my resume and CV. </p> 
+						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and REDCap, mining electronic medical records, analyzing interview transcriptions, and annotating video data from field studies. The products of these projects are further described in my resume and CV. </p> 
 
 						</header>
 						<ul class="actions">
@@ -89,7 +89,7 @@
 						<p><h3>Making Patient Care More Equitable</h3> 
 							<span class="image left"><img src="images/EMR.jpg" alt="" /></span>
 							Approximately one-fifth of children in the United States are estimated to suffer from a mental health disorder. However, a majority do not receive treatment or experience a delay in receiving treatment. I worked with colleagues from the Massachusetts General Hospital to understand and improve screening measures that help doctors identify children who are at risk of a mental health disorder. I also investigated how models of psychiatric care could be improved in an underserved Latinx community. 
-							<br><br><b>Research Method: </b> Interviews, Surveys (RedCap), Electronic Medical Records 
+							<br><br><b>Research Method: </b> Interviews, Surveys (REDCap), Electronic Medical Records 
 							<br><b>Data Analysis: </b> ANOVA, Logistic Regression, Factor Analysis, Receiver operating characteristic Curve, Confirmatory Factor Analysis on SPSS and STATA
 							<br><b>Impact: </b> Publications in <i>Pediatrics</i>, <i>Academic Pediatrics</i>, <i>Journal of Health Care for the Poor and Underserved</i>
 							</p>
