--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<h1><strong>Cindy Chiang</strong><br />
 					PhD Candidate<br />
 					Developmental Psychology<br />
-					<a href="https://dornsife.usc.edu/psyc/">University of Southern California</a>.</h1>
+					<a href="https://dornsife.usc.edu/psyc/" target="_blank">University of Southern California</a>.</h1>
 				</div>
 			</header>
 
@@ -45,8 +45,9 @@
 							<h2>About</h2>
 						<p> I study language processing, language development, and the cognitive mechanisms that underlie these processes-- such as attention, memory, and cognitive control. I work with <a href="https://dornsife.usc.edu/cf/faculty-and-staff/faculty.cfm?pid=1003543" target="_blank"> Toby Mintz </a> and have collaborated with <a href="https://elsikaiser.com/" target="_blank">Elsi Kaiser</a>. My current research focuses on disfluencies (e.g. <i>uh's</i> and <i>um's</i>) and uses eyetracking and mouse tracking methods in lab and online, as well as computational modelling performed on large text databases of conversational interactions  <a href="https://childes.talkbank.org/" target="_blank"> (CHILDES) </a>. The research is generously supported by the  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2041372&HistoricalAwards=false"  target="_blank"> NSF Doctoral Dissertation Research Improvement Grant</a>.
 
-						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and REDCap, mining electronic medical records, analyzing interview transcriptions, and annotating video data from field studies. The products of these projects are further described in my resume and CV. </p> 
+						<br><br>In the past, I also worked heavily with different methods, including other behavioral methods with infants and young children, surveys using Qualtrics and Redcap, analyzing interview transcriptions and video data from field studies. The products of these projects are further described in my resume and CV. 
 
+						<br><br><em>Fun fact: </em> In high school, my hobby was creating 2D/3D characters and animations using a combination of Maya, ZBrush, Adobe Photoshop, and Adobe After Effects. Some of the skillsets came in handy when I created cartoon images for my experimental work.</p> 
 						</header>
 						<ul class="actions">
 							<li><a href="#research" class="button">Select Research Projects</a></li> 
