--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<p>
 								cindyc[at]usc[dot]edu 
 								<ul class="actions">
-											<li><a href="mailto:cindyc@usc.edu"><input type="submit" name="submit" value="Click here to send me an e-mail" /></a></li>
+											<li><a href="mailto:cindyc@usc.edu" target="_blank"class="button"> Click here to send me an e-mail </a></li>
 										</ul>
 								</p>
 								<h3>Address</h3>
