--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<br><br><em>Fun fact: </em> In high school, my hobby was creating 2D/3D characters and animations using a combination of Maya, ZBrush, Adobe Photoshop, and Adobe After Effects. Some of the skillsets came in handy when I created cartoon images for my experimental work.</p> 
 						</header>
 						<ul class="actions">
-							<li><a href="#research" class="button">Select Research</a></li> 
+							<li><a href="#research" class="button">Select Research Projects</a></li> 
 							<li><a href="#contact" class="button">Contact Info</a></li>
 							<li><a href="images/Website_Resume_CindyChiang.pdf" target="_blank"class="button">Resume &nbsp <i class="icon fa-file-pdf-o"></i></a></li>
 							<li><a href="images/CV_CindyChiang_202107.pdf" target="_blank"class="button">CV &nbsp <i class="icon fa-file-pdf-o"></i></a></li>
