--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<!-- Research -->
 					<section id="research">
 						<h2>Select Research Projects</h2>
-						<p><h3><i>Impact of disfluencies on prediction and language learning </i></h3> 
+						<p><h3>Impact of disfluencies on prediction and language learning</h3> 
 							<span class="image left"><img src="images/WebcamExptSetup.jpg" alt="" /></span>
 
 							Speakers frequently say uh's and um's (disfluencies), and adults will shift their beliefs about what a speaker will say next. In a set of studies, I examine what happens when children hear <i>uh's</i>, and how it affects their language development. Findings show that children consider alternative sentence structures when they hear disfluencies, and this consideration impacts the types of sentences they prefer in the future.
